# CooperativeMapping

./: ACR82GATBTCHS.docx  README.md  dependencies.rosinstall
loam_velodyne/: CMakeLists.txt  README.md  package.xml
loam_velodyne/include/loam_velodyne/: common.h
loam_velodyne/include/loam_velodyne_msg/: Heading.h  NodeTransform.h
loam_velodyne/include/novatel_msgs/: Ack.h  BESTPOS.h  CORRIMUDATA.h  CommonFooter.h  CommonHeader.h  INSCOV.h  INSPVAX.h
loam_velodyne/launch/: input_filters_outdoor.yaml  kitti_loop_closure.yaml  loam_velodyne_HDL64.launch  loam_velodyne_VLP16.launch
loam_velodyne/rviz_cfg/: loam_velodyne.rviz
loam_velodyne/src/: Communicate.cpp  DataCollect.cpp  DataCollect.h  Matching.cpp  RobotLocation.cpp  changes  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
loam_velodyne/src/Communicate/: Location.hpp  MatchingResult.hpp  PointCloud.hpp  Pose.hpp
loam_velodyne_msg/: CMakeCache.txt  CMakeLists.txt  package.xml
loam_velodyne_msg/catkin_generated/: generate_cached_setup.py  loam_velodyne_msg-msg-extras.cmake.develspace.in  loam_velodyne_msg-msg-extras.cmake.installspace.in
loam_velodyne_msg/catkin_generated/installspace/: loam_velodyne_msg-msg-paths.cmake
loam_velodyne_msg/cmake/: loam_velodyne_msg-genmsg-context.py  loam_velodyne_msg-genmsg.cmake
loam_velodyne_msg/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
loam_velodyne_msg/devel/share/loam_velodyne_msg/cmake/: loam_velodyne_msg-msg-paths.cmake
loam_velodyne_msg/msg/: Heading.msg  NodeTransform.msg
segmatch/include/segmatch/: segmatch.hpp
segmatch/include/segmatch/impl/: local_map.hpp  local_map_32.hpp
segmatch/include/segmatch/recognizers/: graph_utilities.hpp
segmatch/src/: segmatch.cpp
segmatch_ros/include/segmatch_ros/: segmatch_worker.hpp
segmatch_ros/src/: segmatch_worker.cpp
