<?xml version="1.0"?>
<package format="2">
  <name>loam_velodyne</name>
  <version>0.0.1</version>
  <description>
    This is a ROS implementation of LOAM for Velodyne multiplane laser scanners.
    LOAM is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="evenator@swri.org">Ed Venator</maintainer>

  <license>BSD</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>
  
  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gtsam_catkin</depend>
  <depend>laser_slam</depend>
  <depend>laser_slam_ros</depend>
  <depend>libpointmatcher</depend>
  <depend>libpointmatcher_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>minkindr</depend>
  <depend>segmatch</depend>  
  <depend>segmatch_ros</depend>  
  <depend>visualization_msgs</depend>
  
  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>
</package>
