<?xml version="1.0"?>
<package>
  <name>loam_velodyne_msg</name>
  <version>1.0.0</version>
  <description>mapping msg</description>

  <maintainer email="liby3@mail2.sysu.edu.cn">LiBoyang</maintainer>

  <author email="liby3@mail2.sysu.edu.cn">LiBoyang</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
